<resources>
    <string name="app_name">BuggerDuck Bot</string>
    <string name="notConnectionString">DISPOSITIVO NON CONNESSO</string>
    <string name="connectionString">DISPOSITIVO CONNESSO</string>
    <string name="connectionBtn">CONNETTI E AVVIA IL TASK</string>
    <string name="mapString">Dimensione mappa</string>
    <string name="positionString">Posizione iniziale</string>
    <string name="taskString">Scegli il task</string>
    <string name="task1Btn">TASK 1</string>
    <string name="task2Btn">TASK 2</string>
    <string name="task3Btn">TASK 3</string>
    <string name="noErrorString">Non ci sono errori</string>
    <string name="genericErrorString">Ah volevi eh? volevi ? guarda che errore, non se lo aspettava</string>
    <string name="connectionError">Errore di connessione</string>
    <string name="alredyConnected">Sei già connesso</string>
    <string name="needConnection">Devi prima connetterti al robot</string>
    <string name="sleepError">Il Thread ha avuto problemi con la sleep</string>
    <string name="mineNumber">Numero di mine</string>


    <string name="error_missing_permissions">Cannot start without required permissions</string>

    <string name="toast_connected">Connected to %s</string>
    <string name="toast_disconnected">Disconnected from %s</string>

    <string name="status_unknown">Please wait</string>
    <string name="status_connected">Connected</string>

    <string name="status_advertising">Advertising</string>
    <string name="status_discovering">Press the button to start Advertisement.</string>


    <string name="secret_key">Encrypt Key</string>
</resources>
