<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/connectionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/connectionBtn" />

    <TextView
        android:id="@+id/connectionString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/connectionString" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/taskString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/taskString" />

        <Button
            android:id="@+id/task1Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task1Btn" />

        <Button
            android:id="@+id/task2Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task2Btn" />

        <Button
            android:id="@+id/task3Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task3Btn" />
    </LinearLayout>

</LinearLayout>
